--- a/res/index.html
+++ b/res/index.html
@@ -7,6 +7,7 @@
         <!-- script src="http://localhost:35729/livereload.js"></script -->
         <link rel="stylesheet" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<title>ProjectABE - Arduboy Emulator</title>
     </head>
     <body data-inject="App"></body>
 </html>
