--- a/res/index.html
+++ b/res/index.html
@@ -9,5 +9,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<title>ProjectABE - Arduboy Emulator</title>
     </head>
-    <body data-inject="App"></body>
+    <body data-inject="App">
+    </body>
 </html>
