--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8"></meta>
-        <script src="app.js?ck=1"></script>
+        <script src="app.js"></script>
 	<script src="ace/ace.js"></script>
 	<!-- script src="gif.js"></script -->
         <!-- script src="http://localhost:35729/livereload.js"></script -->
